package ua.hillel.lessons.lesson25.demos._02_bridge;

public interface Device {
    void start();
    void operate();
    void stop();
}
