package ua.hillel.lessons.lesson25.demos._02_bridge;

public interface Option {
    void onActivate();
    void apply();
    void onDeactivate();
}
